--- a/views/events.pug
+++ b/views/events.pug
@@ -63,7 +63,7 @@ block content
                         //p
                         //a(href = "https://www.facebook.com/events/369911576674539/") BP Supply and Trading Event.
                         p
-                        img(src = "./img/BPST.jpg" width="300" height="200")
+                        img(src = "./img/about_carousel_3-BP_Supply_And_Trading_2016-17.jpg" width="300" height="200")
                         .container
                         a.btn.btn-info.btn-block(href='#bpst', data-toggle='collapse') BP Supply and Trading Event
                         #bpst.collapse
@@ -83,7 +83,7 @@ block content
                         //p
                         //a(href = "https://www.facebook.com/events/234166873592041/") Dur(h).ac._k
                         p
-                        <img src = "./img/Group_pic.jpg" width="300" height="200">
+                        img(src = "./img/about_carousel_1-Joe_Nash_Durhack_Initial_Talks_Group_Photo_2016-17.jpg" width="300" height="200")
                         .container
                         a.btn.btn-info.btn-block(href='#dhack', data-toggle='collapse') Dur(h).ac._k
                         #dhack.collapse
