--- a/views/quickLinks.pug
+++ b/views/quickLinks.pug
@@ -5,7 +5,7 @@
 
 mixin quickLinks
     link(href="/quickLinks.css" rel="stylesheet")
-    div.container
+    div.container.quickLinks
         //- Separate text and buttons into two separate rows
         div.row
             div.col-md-3
