--- a/public/aboutStyle.css
+++ b/public/aboutStyle.css
@@ -1,3 +1,29 @@
 #information {
     font-size: medium;
 }
+
+/* Padding trick - the padding knows the width of the div so can set the height
+   accordingly to be 16:9.
+*/
+.carousel-inner {
+    width: 100%;
+    height: 0 !important;
+    background-color: #000;
+    padding: 56.25% 0 0 0;
+}
+
+.carousel-inner > .active {
+    position: absolute !important;
+    display: block !important;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    min-width: 100%;
+    max-height: 100%;
+    margin: auto;
+}
+
+.quickLinks {
+    padding-top: 2rem;
+}
