--- a/public/quickLinks.css
+++ b/public/quickLinks.css
@@ -29,9 +29,6 @@
     }
 }
 
-/*
-    Add a margin to separate quick links from the footer as necessary
- */
-.btn-container {
-    margin-bottom: 20px !important;
+.quickLinks > h1, h2, h3, h4, h5, h6 {
+    margin-top: 0;
 }
