--- a/views/layouts/banner-content.pug
+++ b/views/layouts/banner-content.pug
@@ -1,5 +1,8 @@
 extends ../templates/marginals.pug
-    
+
+block head
+    link(href="/bannerContentLayout.css" rel="stylesheet")
+
 block content
     .wrapper
         .row.page-title-row
