Add Blog page to navbar
We will have a new blog page where we will add posts from our sponosors

--- a/views/templates/marginals.pug
+++ b/views/templates/marginals.pug
@@ -22,6 +22,8 @@ block body
                         li
                             a(href="team") Team
                         li
+                            a(href="blog") Blog
+                        li
                             a(href="contact") Contact
         block body
         .push
