--- a/views/about.pug
+++ b/views/about.pug
@@ -9,7 +9,19 @@ block append head
     link(href="/aboutStyle.css" rel="stylesheet")
 
 block title
-    object(data="../img/about-banner-text-bg.svg" type="image/svg+xml")
+    .banner-left
+        object.banner(data="../img/about-banner-left.svg" type="image/svg+xml")
+    .jumbotron.page-title-jumbotron
+        h1 About Us
+        h2 Find out more about the society
+        .link-icons
+            object(data="../img/Teal-Icons/facebook-square.svg" type="image/svg+xml")
+            object(data="../img/Teal-Icons/envelope-square.svg" type="image/svg+xml")
+            object(data="../img/Teal-Icons/calendar.svg" type="image/svg+xml")
+            object(data="../img/Teal-Icons/slack.svg" type="image/svg+xml")
+            object(data="../img/Teal-Icons/github-square.svg" type="image/svg+xml")
+    .banner-right
+        object.banner(data="../img/about-banner-right.svg" type="image/svg+xml")
 
 block content
     div.row
