Improve Events page aesthetics
- Added photo for Durhack.
- Made information class sitewide so that pages will have a consistent feel.
- Made images take up 100% of width in their columns.
- Matched buttons to image width and removed rounded corners at top. Gives more sense button is "attached" to image.

--- a/views/about.pug
+++ b/views/about.pug
@@ -17,7 +17,7 @@ block content
     div.row
         .container
             div.col-md-6
-                p#information.
+                p.information.
                     CompSoc is Durham University’s Computing Society. It is run entirely by students and serves to promote
                     programming, development and general computing. We are a community of passionate problem solvers who
                     come together to run weekly meetings, workshops and hackathons throughout the year. No matter if
