Tidy up spacing and sizing of Events page
- Reduced headings to h2 size.
- Made spacing consistent and working on mobile devices.

--- a/public/events.css
+++ b/public/events.css
@@ -3,13 +3,20 @@ img {
     height: auto;
 }
 
-.row {
-    padding-bottom: 2rem;
+.col-md-6 {
+    margin-top: 2.5rem;
 }
 
-.row:last-child {
+.col-md-6 > .row:last-child {
     padding-bottom: 0;
 }
+
+.col-md-6 > .row, .col-md-6 > .information {
+    padding-bottom: 2rem;
+    margin-bottom: 0;
+}
+
+
 
 .btn {
     border-top-left-radius: 0 !important;
@@ -20,3 +27,10 @@ img {
     margin-top: 1rem;
 }
 
+h2:first-child {
+    margin-top: 0;
+}
+
+p:last-child {
+    margin-bottom: 0;
+}
