--- a/public/indexStyle.css
+++ b/public/indexStyle.css
@@ -57,7 +57,7 @@ object {
     border-radius: 0;
 }
 
-.panel-body > h2, h3 {
+.panel-body > h2, .panel-body > h3 {
     text-align: center;
     color: #333;
 }
