Add and format pictures/titles for exec members
- Changed layout of role descriptions using CSS margins to separate instead of paragraphs. Closes #69.
- Renamed exec pictures to be consistent and obvious.
- Exec photos now take up as much width as they can, capped at 250px. This isn't ideal for tablet viewing which may be worth returning to. Closes #68.
- Added picture for each exec member where available. Cropped to square size. Closes #70.

--- a/public/bannerContentLayout.css
+++ b/public/bannerContentLayout.css
@@ -30,3 +30,14 @@
     padding-top: 2.7rem;
     padding-bottom: 2.7rem;
 }
+
+/* Spacing is performed by the containing elements, not the text */
+h2, h3 {
+    margin-top: 0 !important;
+}
+
+/* Keeps text in expanding panels centered */
+.panel-heading > h3 {
+    margin: auto;
+    text-align: center;
+}
