Implement email sending form on back end
Uses Nodemailer to send an email to ourselves with the query/comment/whatever that was typed into the form on the email. Should be pretty hard to programatically hit this route as captcha is required.

To do: Validate that user has entered information into all fields before allowing them to send. Implement on front and back end.

Note: For security, sensitive information has been moved to separate JSON file. Make sure to upload this file to server when deploying.

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -30,7 +30,7 @@ block content
             h2 Drop Us a Message
             p Leave your queries/comments/feedback/suggestions below.
 
-            form.form-group(action="/api/contact" method="POST")
+            form.form-group#send-email
                 div.input-group
                     span.input-group-addon
                         i.fa.fa-user
@@ -55,8 +55,9 @@ block content
                     textarea.form-control(rows="5" id="msgbody" name="msgbody" placeholder="Your Message")
                 br
 
-                button.btn.btn-success#send-email(type="submit") Submit
+                button.btn.btn-success#send-email-btn(type="submit") Submit
                 .g-recaptcha#captcha(data-sitekey="6LdYtzAUAAAAAMyts382GORnfFZNI4Yf0-AgVpJ9")
 
 block append scripts
     script(src="https://www.google.com/recaptcha/api.js")
+    script(src="/js/contact.js")
