--- a/views/templates/marginals.pug
+++ b/views/templates/marginals.pug
@@ -23,7 +23,10 @@ block nav
                     li
                         a(href="blog") Blog
                     li
+                        a(href="durhack") DurHack
+                    li
                         a(href="contact") Contact
+
 
 block scripts
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js")
