DurHack page improvements

--- a/views/durhack.pug
+++ b/views/durhack.pug
@@ -3,13 +3,13 @@ extends layouts/banner-content.pug
 include ./pageBanner.pug
 
 block append head
-    title About - DUCompSoc
+    title DurHack - DUCompSoc
     link(href="/aboutStyle.css" rel="stylesheet")
 
 
 //- The main title and banner with icons
 block title
-    +pageBanner('About Us', 'Find out more about the society')
+    +pageBanner('DurHack', '24-hour inter-uni hackathon')
 
 
 block content
