added blackrock logo and profile

--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -19,12 +19,22 @@ block content
                             a(data-toggle="collapse" href="#sp17-18") 2017/18
                     #sp17-18.panel-collapse.collapse.in
                         div.panel-body
-                            div.col-md-3
-                                h4 BlackRock
-                            div.col-md-3
-                                h4 Radix
-                            div.col-md-3
-                                h4 HiredGrad
+                            div.row
+                                div.col-md-4
+                                    img.sponsor-img(src="./img/blackrock.jpg")
+                                div.col-md-4
+                                    h4
+                                div.col-md-4
+                                    h4 
+                            div.row
+                                div.col-md-4
+                                    p
+                                        | BlackRock combines the best of being a technology pioneer and financial leader. Since our inception in 1988, we’ve grown from an entrepreneurial start-up into the world’s largest investment manager by putting technology - and continuous innovation - at the heart of our business.
+                                        | Today, as the world’s largest asset manager, with more than $5.7 trillion under management, BlackRock brings together financial leadership and state-of-the-art technology to provide answers to millions of investors who entrust their financial futures to us
+                                div.col-md-4
+                                    p
+                                div.col-md-4
+                                    p
             div.panel-group
                 div.panel.panel-default
                     div.panel-heading
