linked blackrock website to its logo

--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -21,11 +21,12 @@ block content
                         div.panel-body
                             div.row
                                 div.col-md-4
-                                    img.sponsor-img(src="./img/blackrock.jpg")
+                                    a(href="http://www.blackrock.com")
+                                        img.sponsor-img(src="./img/blackrock.jpg")
                                 div.col-md-4
                                     h4
                                 div.col-md-4
-                                    h4 
+                                    h4
                             div.row
                                 div.col-md-4
                                     p
