added .tech details

--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -26,7 +26,8 @@ block content
                                 div.col-md-4
                                     h4
                                 div.col-md-4
-                                    h4
+                                    a(href="http://www.radix.website")
+                                        img.sponsor-img(src="./img/radix.png")
                             div.row
                                 div.col-md-4
                                     p
@@ -36,6 +37,7 @@ block content
                                     p
                                 div.col-md-4
                                     p
+                                        |Since it's launch 2 years ago, .TECH Domains has become the de factor domain extension for programmers, startups, tech brands and enthusiasts. With over 250,000 registrations, .TECH has seen a rapid adoption globally, including brands like Viacom.tech, TNW.tech and CES.tech. .TECH has been a constant promoter of the developer and student community, including supporting coding schools, university clubs, college fests as well as over 200 hackathons     |worldwide.
             div.panel-group
                 div.panel.panel-default
                     div.panel-heading
