added thg company presentation and drinks in upcoming events

--- a/views/events.pug
+++ b/views/events.pug
@@ -85,3 +85,10 @@ block content
         .col-md-6
             h2 What Next?
             p.information Mark your calendars for the upcoming events!
+
+            .row
+                //a(href="https://thehutgroup.com") The Hut Group Company Presentation and Drinks
+                img(src="./img/events/thg.png")
+                a.btn.btn-info.btn-block(href='#thg', data-toggle='collapse') THG Company Presentation & Drinks
+                #thg.collapse
+                    p Join THG on October 24, 1830 hrs at ER152, Elvet Riverside to know more about their company and careers with them, followed by drinks.
