some correction in text

--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -22,12 +22,12 @@ block content
                             div.row
                                 div.col-md-4
                                     a(href="http://www.blackrock.com")
-                                        img.sponsor-img(src="./img/blackrock.jpg")
+                                        img.sponsor-img(src="./img/sponsors/blackrock.jpg")
                                 div.col-md-4
-                                    h4
+
                                 div.col-md-4
                                     a(href="http://www.radix.website")
-                                        img.sponsor-img(src="./img/radix.png")
+                                        img.sponsor-img(src="./img/sponsors/radix.png")
                             div.row
                                 div.col-md-4
                                     p
@@ -37,7 +37,7 @@ block content
                                     p
                                 div.col-md-4
                                     p
-                                        |Since it's launch 2 years ago, .TECH Domains has become the de factor domain extension for programmers, startups, tech brands and enthusiasts. With over 250,000 registrations, .TECH has seen a rapid adoption globally, including brands like Viacom.tech, TNW.tech and CES.tech. .TECH has been a constant promoter of the developer and student community, including supporting coding schools, university clubs, college fests as well as over 200 hackathons     |worldwide.
+                                        |Since it's launch 2 years ago, .TECH Domains has become the de factor domain extension for programmers, startups, tech brands and enthusiasts. With over 250,000 registrations, .TECH has seen a rapid adoption globally, including brands like Viacom.tech, TNW.tech and CES.tech. .TECH has been a constant promoter of the developer and student community, including supporting coding schools, university clubs, college fests as well as over 200 hackathons     worldwide.
             div.panel-group
                 div.panel.panel-default
                     div.panel-heading
@@ -48,7 +48,7 @@ block content
                             .row.sponsor-row
                                     .col-md-1
                                     .col-md-4
-                                        img.sponsor-img(src="./img/sl_logo.png")
+                                        img.sponsor-img(src="./img/sponsors/sl_logo.png")
                                     .col-md-6
                                         h3.sponsor-header Scott Logic
                                         p
