--- a/views/durhack.pug
+++ b/views/durhack.pug
@@ -5,6 +5,7 @@ include ./pageBanner.pug
 block append head
     title DurHack - DUCompSoc
     link(href="/aboutStyle.css" rel="stylesheet")
+    link(href="/durhackStyle.css")
 
 
 //- The main title and banner with icons
@@ -13,3 +14,11 @@ block title
 
 
 block content
+    .container
+        #up-info
+            h4 Please check back soon for information about DurHack 2017-18.
+            h4 Meanwhile, why not have a look at our previous and our very first season!
+            br
+            br
+            a(href = "http://durhack.com")
+                h3 Take Me There!
