Implement invisible reCAPTCHA on front end
The reCAPTCHA v2 div was not scaling well to mobile devices. This is a more elegant solution. This change also implements email validation of the form as it was convenient when setting up invisible reCAPTCHA. See the second example "Invoking the invisible reCAPTCHA challenge after client side validation.": https://developers.google.com/recaptcha/docs/invisible#example

--- a/public/contact.css
+++ b/public/contact.css
@@ -2,6 +2,12 @@
     margin-bottom: 2rem;
 }
 
-#captcha {
-    margin: 0;
+.success-message, .form-error-message, .captcha-error-message {
+    display: none;
+    margin-bottom: 2rem;
+}
+
+/* So reCaptcha overlay is in front of inputs */
+.form-control {
+    z-index: 0 !important;
 }
