bye bye scottlogic

--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ include ./quickLinks.pug
 block head
     title Homepage - DU CompSoc
     link(href="/homepageStyle.css" rel="stylesheet")
-    
+
 block content
     .wrapper
         //- Main jumbotron for a primary marketing message or call to action
@@ -18,7 +18,7 @@ block content
             .panel.panel-default#main-info
                 .panel-body
                     h2#main-title Do you love technology? Programming? Or just want to learn something new?
-                    h3 CompSoc runs talks, hackathons and workshops for its members throughout the year -- all with free pizza courtesy of ScottLogic!
+                    h3 CompSoc runs talks, hackathons and workshops for its members throughout the year.
                     h3 Join today to be notified of upcoming events.
                     //- Dirty dirty hack
                     h3.hiredGradButton
