shortened description to 2 lines

--- a/views/blog.pug
+++ b/views/blog.pug
@@ -9,7 +9,7 @@ block append head
 
 //- The main title and banner with icons
 block title
-    +pageBanner('Blog', 'Stories from our Sponsors, Partners and Us')
+    +pageBanner('Blog', 'Stories from Partners and Us')
 
 block content
     //- blog posts
