--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -20,27 +20,57 @@ block content
                     #sp17-18.panel-collapse.collapse.in
                         div.panel-body
                             div.row
-                                div.col-md-4
+                                div.col-md-1
+                                div.col-md-2
+                                    br
+                                    br
                                     a(href="http://www.blackrock.com")
                                         img.sponsor-img(src="./img/sponsors/blackrock.jpg")
-                                div.col-md-4
+                                div.col-md-2
                                     a(href="http://www.hiredgrad.com")
                                         img.sponsor-img(src="./img/sponsors/hiredgrad.png")
-                                div.col-md-4
+                                div.col-md-2
+                                    br
                                     a(href="http://www.radix.website")
                                         img.sponsor-img(src="./img/sponsors/radix.png")
+                                div.col-md-2
+                                    br
+                                    br
+                                    a(href="http://www.schroders.com")
+                                        img.sponosr-img(src="./img/sponsors/schroders.svg")
+                                div.col-md-2
+                                    br
+                                    br
+                                    a(href="http://www.scottlogic.com")
+                                        img.sponsor-img(src="./img/sponsors/sl_logo.png")
+                                div.col-md-1
+
+
                             div.row
-                                div.col-md-4
+                                div.col-md-1
+                                div.col-md-2
                                     p
                                         | <b>BlackRock</b> combines the best of being a technology pioneer and financial leader. Since our inception in 1988, we’ve grown from an entrepreneurial start-up into the world’s largest investment manager by putting technology - and continuous innovation - at the heart of our business.
                                         | Today, as the world’s largest asset manager, with more than $5.7 trillion under management, BlackRock brings together financial leadership and state-of-the-art technology to provide answers to millions of investors who entrust their financial futures to us.
-                                div.col-md-4
+                                div.col-md-2
                                     p
                                         | <b>HiredGrad</b> helps societies grow, and provides incredible career value to the members, by connecting them with top, fast-growing companies that are typically hard to reach.
 
-                                div.col-md-4
+                                div.col-md-2
                                     p
-                                        |Since it's launch 2 years ago, <b>.TECH Domains</b> has become the de factor domain extension for programmers, startups, tech brands and enthusiasts. With over 250,000 registrations, .TECH has seen a rapid adoption globally, including brands like Viacom.tech, TNW.tech and CES.tech. .TECH has been a constant promoter of the developer and student community, including supporting coding schools, university clubs, college fests as well as over 200 hackathons     worldwide.
+                                        |Since it's launch 2 years ago, <b>.TECH Domains</b> has become the de factor domain extension for programmers, startups, tech brands and enthusiasts. With over 250,000 registrations, .TECH has seen a rapid adoption globally, including brands like Viacom.tech, TNW.tech and CES.tech. .TECH has been a constant promoter of the developer and student community, including supporting coding schools, university clubs, college fests as well as over 200 hackathons  worldwide.
+                                div.col-md-2
+                                    p
+                                        | <b>Schroders</b> description
+
+                                div.col-md-2
+                                    p
+                                        | <b>Scott Logic</b> is a software consultancy company headquartered in the UK. Today, they employ over 190
+                                        | of the best people in the industry.
+
+                                div.col-md-1
+
+
             div.panel-group
                 div.panel.panel-default
                     div.panel-heading
