adjusted all images in a single row - looks way more neater

--- a/views/team.pug
+++ b/views/team.pug
@@ -41,28 +41,28 @@ block content
                         div.panel-body
                             //- Rewrite to be more pugish?
                             .row
-                                div.col-md-3
+                                div.col-md-1
+                                div.col-md-2
                                     h3 President
                                     img(src="./img/team/Robbie Jakob-Whitworth.jpg").exec-photo
                                     h3 Robbie Jakob-Whitworth
-                                div.col-md-3
+                                div.col-md-2
                                     h3 Secretary
                                     img(src="./img/team/Vivek Mehta.png").exec-photo
                                     h3 Vivek Mehta
-                                div.col-md-3
+                                div.col-md-2
                                     h3 Treasurer
                                     img(src="./img/team/Tom O'Leary.jpg").exec-photo
                                     h3 Tom O'Leary
-                                div.col-md-3
+                                div.col-md-2
                                     h3 Web Officer
-                                    img(src="./img/team/Soumya Singh.jpg").exec-photo
+                                    img(src="./img/team/soumya2.png").exec-photo
                                     h3 Soumya Singh
-                            .row
-                                div.col-md-3
-                                    h3 Social Secretary
+                                div.col-md-2
+                                    h3 Social Sec
                                     img(src="./img/team/placeholder.png").exec-photo
                                     h3 Ryota Sakai
-
+                                div.col-md-1
 
             div.panel-group
                 div.panel.panel-default
@@ -95,31 +95,29 @@ block content
                             a(data-toggle="collapse" href="#ex56") 2015/16
                     #ex56.panel-collapse.collapse
                         div.panel-body
-                            .row
-                                div.col-md-3
+                                div.col-md-2
                                     h3 President
                                     img(src="./img/team/Alistair Madden.png").exec-photo
                                     h3 Alistair Madden
-                                div.col-md-3
+                                div.col-md-2
                                     h3 Secretary
                                     img(src="./img/team/placeholder.png").exec-photo
                                     h3 Ersil Jabbar
-                                div.col-md-3
+                                div.col-md-2
                                     h3 Treasurer
                                     img(src="./img/team/placeholder.png").exec-photo
                                     h3 Raffe-ul Islam
-                                div.col-md-3
-                                    h3 Publicity Officer
+                                div.col-md-2
+                                    h3 Publicity
                                     img(src="./img/team/placeholder.png").exec-photo
                                     h3 Alan Go
-                            .row
-                                div.col-md-3
+                                div.col-md-2
                                     h3 Web Officer
-                                    img(src="./img/team/placeholder.png" width=245 height=245)
+                                    img(src="./img/team/placeholder.png").exec-photo
                                     h3 Ram Gupta
-                                div.col-md-3
+                                div.col-md-2
                                     h3 Librarian
-                                    img(src="./img/team/placeholder.png" width=245 height=245)
+                                    img(src="./img/team/placeholder.png").exec-photo
                                     h3 Gabor Veres
 
         div.row
