--- a/views/team.pug
+++ b/views/team.pug
@@ -124,4 +124,4 @@ block content
             h2 Contributors
             div.col-md-12
                 h3 Design and Assets
-                p Molly Watkins designed our lovely homepage banner and the society logo.
+                p <b>Molly Watkins</b> designed our lovely homepage banner and the society logo.
