fixed 'em all - they now lead to the correct pages

--- a/views/quickLinks.pug
+++ b/views/quickLinks.pug
@@ -33,10 +33,10 @@ mixin quickLinks
                 a.btn.btn-default.homepage-btn-horizontal(href="team" role="button") View details &raquo;
 
             .col-md-3
-                a.btn.btn-default.homepage-btn-horizontal(href="team" role="button") View details &raquo;
+                a.btn.btn-default.homepage-btn-horizontal(href="events" role="button") View details &raquo;
 
             .col-md-3
-                a.btn.btn-default.homepage-btn-horizontal(href="team" role="button") View details &raquo;
+                a.btn.btn-default.homepage-btn-horizontal(href="sponsors" role="button") View details &raquo;
 
             .col-md-3
-                a.btn.btn-default.homepage-btn-horizontal(href="team" role="button") View details &raquo;
+                a.btn.btn-default.homepage-btn-horizontal(href="contact" role="button") View details &raquo;
