added ryota's picture

--- a/views/team.pug
+++ b/views/team.pug
@@ -60,7 +60,7 @@ block content
                                     h3 Soumya Singh
                                 div.col-md-2
                                     h3 Social Sec
-                                    img(src="./img/team/placeholder.png").exec-photo
+                                    img(src="./img/team/ryota.png").exec-photo
                                     h3 Ryota Sakai
                                 div.col-md-1
 
